--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
+    "papaparse": "^5.4.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.6.3",
+    "@types/papaparse": "^5.3.8",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
