--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "papaparse": "^5.4.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.4",
     "react-dom": "^18.2.0",
     "react-simple-code-editor": "^0.13.1",
     "tailwind-merge": "^1.14.0",
